--- a/custom-elements/registering-custom-elements/definition-construction-algorithm-test-004.html
+++ b/custom-elements/registering-custom-elements/definition-construction-algorithm-test-004.html
@@ -17,10 +17,10 @@
 test(function() {
     var doc = newHTMLDocument();
     var name = 'x-a-1';
-    doc.register(name);
+    doc.registerElement(name);
     //FIXME Should the type of the exception be specified here?
     assert_throws(null, function() {
-        doc.register(name);    
+        doc.registerElement(name);    
     }, 'Exception should be thrown if definition with the same type already exists');
 }, 'Check duplicate definition');
 
@@ -28,12 +28,12 @@ test(function() {
 test(function() {
     var doc = newHTMLDocument();
     var name = 'x-a-2';
-    doc.register(name);
+    doc.registerElement(name);
     
     HTML5_ELEMENTS.forEach(function (element) {
         //FIXME Should the type of the exception be specified here?
         assert_throws(null, function() {
-            doc.register(name, {
+            doc.registerElement(name, {
                 prototype: Object.create(bj.constructor.prototype),
                 extends: element       
             });    
@@ -45,7 +45,7 @@ test(function() {
 test(function() {
     var doc = newHTMLDocument();    
     var name = 'x-a-3';
-    doc.register(name, {
+    doc.registerElement(name, {
         prototype: Object.create(HTMLAnchorElement.prototype),
         extends: 'a'
     });
@@ -53,7 +53,7 @@ test(function() {
     HTML5_ELEMENTS.forEach(function(element) {
         //FIXME Should the type of the exception be specified here?
         assert_throws(null, function() {
-            doc.register(name, {
+            doc.registerElement(name, {
                 prototype: Object.create(bj.constructor.prototype),
                 extends: element       
             });    
