--- a/custom-elements/registering-custom-elements/definition-construction-algorithm-test-001.html
+++ b/custom-elements/registering-custom-elements/definition-construction-algorithm-test-001.html
@@ -16,7 +16,7 @@
 
 test(function() {
     var doc = newHTMLDocument();
-    var GeneratedConstructor = doc.register('X-A-1');
+    var GeneratedConstructor = doc.registerElementElement('X-A-1');
     var customElement = new GeneratedConstructor();
 
     assert_equals(customElement.localName, 'x-a-1', 'Custom element type should be lowercased');
@@ -30,7 +30,7 @@ test(function() {
         var obj = doc.createElement(element);        
         var name = 'x-' + element;
         var proto = Object.create(obj.constructor.prototype);
-        var GeneratedConstructor = doc.register(name, {
+        var GeneratedConstructor = doc.registerElementElement(name, {
             prototype: proto, 
             extends: element.toUpperCase()
         });
