Fix the attribute of link element for all tests

--- a/contributors/intel/submitted/css3-transitions/transition-property-004.html
+++ b/contributors/intel/submitted/css3-transitions/transition-property-004.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>CSS Transitions Test: transition-property - all</title>
-<link name="author" title="Intel" href="http://www.intel.com">
-<link name="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
-<link name="help" title="2.1. The 'transition-property' Property" href="http://www.w3.org/TR/css3-transitions/#transition-property-property">
+<link rel="author" title="Intel" href="http://www.intel.com">
+<link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
+<link rel="help" title="2.1. The 'transition-property' Property" href="http://www.w3.org/TR/css3-transitions/#transition-property-property">
 <meta name="flags" content="interact">
 <meta name="assert" content="The 'transition-duration' property set 'all' means that all properties are transitioned.">
 <style>
