--- a/contributors/intel/submitted/css3-transitions/transition-property-012.html
+++ b/contributors/intel/submitted/css3-transitions/transition-property-012.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>CSS Transitions Test: transition-property - border-right-width</title>
-<link name="author" title="Intel" href="http://www.intel.com">
-<link name="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
-<link name="help" title="7.1. Properties from CSS" href="http://www.w3.org/TR/css3-transitions/#animatable-css">
+<link rel="author" title="Intel" href="http://www.intel.com">
+<link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
+<link rel="help" title="7.1. Properties from CSS" href="http://www.w3.org/TR/css3-transitions/#animatable-css">
 <meta name="flags" content="interact">
 <meta name="assert" content="Test checks that the 'border-right-width' property is animatable.">
 <style>
