--- a/contributors/intel/submitted/css3-transitions/transition-duration-004.html
+++ b/contributors/intel/submitted/css3-transitions/transition-duration-004.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>CSS Transitions Test: transition-duration - negative number</title>
-<link name="author" title="Intel" href="http://www.intel.com">
-<link name="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
-<link name="help" title="2.2. The 'transition-duration' Property" href="http://www.w3.org/TR/css3-transitions/#transition-duration-property">
+<link rel="author" title="Intel" href="http://www.intel.com">
+<link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
+<link rel="help" title="2.2. The 'transition-duration' Property" href="http://www.w3.org/TR/css3-transitions/#transition-duration-property">
 <meta name="flags" content="interact">
 <meta name="assert" content="A negative value for 'transition-duration renders the declaration invalid which means the transition is immediate.">
 <style>
