--- a/contributors/intel/submitted/css3-flexbox/flex-shrink-006.html
+++ b/contributors/intel/submitted/css3-flexbox/flex-shrink-006.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>CSS Flexbox Test: flex-shrink - 0(one of flex-shrinks sets 0, another not)</title>
-<link name="author" title="Intel" href="http://www.intel.com">
-<link name="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
-<link name="help" title="7.3.2. The 'flex-shrink' property" href="http://www.w3.org/TR/css3-flexbox/#flex-shrink">
-<link name="match" href="ref-filled-green-100px-square.xht">
+<link rel="author" title="Intel" href="http://www.intel.com">
+<link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
+<link rel="help" title="7.3.2. The 'flex-shrink' property" href="http://www.w3.org/TR/css3-flexbox/#flex-shrink">
+<link rel="match" href="ref-filled-green-100px-square.xht">
 <meta name="flags" content="">
 <meta name="assert" content="The flex item whose flex-shrink property of set 0 will displayed on the top of all flex items">
 <style>
