Fix the attribute of link element for all tests

--- a/contributors/intel/submitted/css3-flexbox/flex-grow-003.html
+++ b/contributors/intel/submitted/css3-flexbox/flex-grow-003.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>CSS Flexbox Test: flex-grow - negative number</title>
-<link name="author" title="Intel" href="http://www.intel.com">
-<link name="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
-<link name="help" title="7.3.1. The 'flex-grow' property" href="http://www.w3.org/TR/css3-flexbox/#flex-grow">
-<link name="match" href="ref-filled-green-100px-square.xht">
+<link rel="author" title="Intel" href="http://www.intel.com">
+<link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
+<link rel="help" title="7.3.1. The 'flex-grow' property" href="http://www.w3.org/TR/css3-flexbox/#flex-grow">
+<link rel="match" href="ref-filled-green-100px-square.xht">
 <meta name="flags" content="">
 <meta name="assert" content="The 'flex-grow' property set negative number, the flex item will not grow.">
 <style>
