--- a/pointerlock/idlharness.html
+++ b/pointerlock/idlharness.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>User Timing IDL tests</title>
+<title>Pointer Lock IDL tests</title>
 <link rel="author" title="W3C" href="http://www.w3.org/" />
 <link rel="help" href="http://www.w3.org/TR/pointerlock/#element-interface"/>
-<link rel="help" href="http://www.w3.org/TR/pointerlock/#extensions-to-the-document-interface"/>
-<link rel="help" href="http://www.w3.org/TR/pointerlock/#extensions-to-the-mouseevent-interface"/>
+<link rel="help" href="http://www.w3.org/TR/pointerlock/#extensions-to-the-document-interface">
+<link rel="help" href="http://www.w3.org/TR/pointerlock/#extensions-to-the-mouseevent-interface">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/resources/WebIDLParser.js"></script>
@@ -14,16 +14,26 @@
 </head>
 
 <body>
-<h1>User Timing IDL tests</h1>
+<h1>Pointer Lock IDL tests</h1>
 
 <pre id='untested_idl' style='display:none'>
-interface Element {
+
+interface EventTarget {
 };
 
-interface Document {
+interface Node : EventTarget {
 };
 
-interface MouseEvent {
+interface Element : Node {
+};
+
+interface Document : Node {
+};
+
+interface Event {
+};
+
+interface MouseEvent : Event {
 };
 </pre>
 
@@ -51,18 +61,19 @@ partial interface MouseEvent {
 
 <script>
 
-(function() {
-  var idl_array = new IdlArray();
+var idl_array = new IdlArray();
 
-  idl_array.add_untested_idls(document.getElementById("untested_idl").textContent);
-  idl_array.add_idls(document.getElementById("idl").textContent);
+setup(function() {
+	idl_array.add_untested_idls(document.getElementById("untested_idl").textContent);
+	idl_array.add_idls(document.getElementById("idl").textContent);
 
-  idl_array.add_objects({ Document: ["window.document"],
-                          Element: ["window.document.documentElement"],
-                          MouseEvent: ["new MouseEvent('pointerlockchange')"] });
+	idl_array.add_objects({ Document: ["window.document"],
+                            Element: ["window.document.documentElement"],
+                            MouseEvent: ["new MouseEvent('mousemove')"],
+                            MouseEvent: ["new MouseEvent('pointerlockchange')"] });
+});
 
-  idl_array.test();
-})();
+idl_array.test();
 
 </script>
 </body>
