Unprefixed CSS Regions and floats tests

--- a/contributors/adobe/submitted/regions/floats/floated-regions-004.html
+++ b/contributors/adobe/submitted/regions/floats/floated-regions-004.html
@@ -16,20 +16,20 @@
 			line-height: 1em;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 			color: green;
 		}
 		.inner-flow {
-			-webkit-flow-into: g;
+			flow-into: g;
 			color: blue;
 		}
 
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			border: 10px solid black;
 		}
 		.inner-region {
-			-webkit-flow-from: g;
+			flow-from: g;
 		}
 		.region p,
 		.inner-region p {
