--- a/contributors/adobe/submitted/regions/floats/floated-regions-005.html
+++ b/contributors/adobe/submitted/regions/floats/floated-regions-005.html
@@ -16,7 +16,7 @@
 			line-height: 1em;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.blue {
 			color: blue;
@@ -26,7 +26,7 @@
 		}
 
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 		}
 		.region p {
 			background: red;
