--- a/contributors/adobe/submitted/regions/floats/floats-clear-breaks-001.html
+++ b/contributors/adobe/submitted/regions/floats/floats-clear-breaks-001.html
@@ -17,7 +17,7 @@
 		}
 		
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		
 		.float {
@@ -26,7 +26,6 @@
 			margin: 2px 4px 6px 8px;
 		}
 		.break {
-			-webkit-region-break-before: always;
 			break-before: region;
 		}
 
@@ -39,7 +38,7 @@
 		}
 
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			display: inline-block;
 			margin-bottom: 10px;
 		}
