--- a/contributors/adobe/submitted/regions/floats/floats-clear-breaks-002.html
+++ b/contributors/adobe/submitted/regions/floats/floats-clear-breaks-002.html
@@ -17,7 +17,7 @@
 		}
 		
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		
 		.float {
@@ -25,7 +25,6 @@
 			color: blue;
 		}
 		.break {
-			-webkit-region-break-before: always;
 			break-before: region;
 		}
 
@@ -39,7 +38,7 @@
 		}
 
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			max-width: 100px;
 			margin-bottom: 10px;
 		}
