--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-001.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-001.html
@@ -10,7 +10,7 @@
 		<link rel="match" href="reference/floats-in-named-flow-001-ref.html">
 		<style>
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 			text-align: right;
 			color: gray;
 		}
@@ -21,7 +21,7 @@
 			float: left;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			max-width: 150px;
 			margin: 5px;
 			border: 2px solid black;
