--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-003.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-003.html
@@ -11,7 +11,7 @@
 		<link rel="match" href="reference/floats-in-named-flow-003-ref.html">
 		<style>
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 			color: gray;
 		}
 		.float {
@@ -27,7 +27,7 @@
 			background: lightblue;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			width: 150px;
 			margin: 5px;
 			background: yellow;
