--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-004.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-004.html
@@ -12,7 +12,7 @@
 		<link rel="match" href="reference/floats-in-named-flow-004-ref.html">
 		<style>
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 			color: gray;
 		}
 		.right {
@@ -37,7 +37,7 @@
 			height: 50px;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			float: left;
 			border-right: 25px solid black;
 			margin: 5px;
