--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-005.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-005.html
@@ -10,7 +10,7 @@
 		<link rel="match" href="reference/floats-in-named-flow-005-ref.html">
 		<style>
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 			color: gray;
 		}
 		.dummy-bfc {
@@ -29,7 +29,7 @@
 			float: right;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			width: 250px;
 			margin: 5px;
 			border: 2px solid black;
