--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-007.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-007.html
@@ -12,7 +12,7 @@
 		<link rel="match" href="reference/floats-in-named-flow-006-ref.html">
 		<style>
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 			color: gray;
 			font-family: Ahem;
 			font-size: 20px;
@@ -34,7 +34,7 @@
 			float: right;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			width: 200px;
 			height: 100px;
 			margin: 5px;
