--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-009.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-009.html
@@ -17,7 +17,7 @@
 			line-height: 1em;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.left-floater {
 			float: left;
@@ -28,7 +28,7 @@
 			color: lightgreen;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			width: 180px;
 			height: 60px;
 			margin: 10px;
