--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-010.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-010.html
@@ -16,7 +16,7 @@
 			line-height: 1em;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			width: 30%;
@@ -30,7 +30,7 @@
 			float: right;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			width: 200px;
 			height: 100px;
 			margin: 10px;
