--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-012.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-012.html
@@ -18,18 +18,17 @@
 			line-height: 1em;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			color: green;
 			float: left;
 		}
 		.break {
-			-webkit-region-break-before: always;
 			break-before: region;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			margin: 10px;
 			width: 200px;
 			background: red;
