--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-013.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-013.html
@@ -16,7 +16,7 @@
 			line-height: 1em;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			color: lightblue;
@@ -27,7 +27,7 @@
 			width: 100px;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			border-right: 20px solid lightblue;
 		}
 
