--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-014.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-014.html
@@ -17,14 +17,14 @@
 			overflow: hidden;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			color: lightblue;
 			float: left;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			width: 100px;
 			height: 40px;
 		}
