--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-016.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-016.html
@@ -19,7 +19,7 @@
 			color: green;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 			color: blue;
 		}
 		.float {
@@ -27,7 +27,7 @@
 			color: green;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 		}
 
 		.region > p {
