--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-017.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-017.html
@@ -17,14 +17,14 @@
 			color: green;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			float: left;
 			color: blue;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			margin: 20px;
 		}
 
@@ -32,7 +32,6 @@
 			background: red;
 		}
 		#container {
-			-webkit-region-break-after: always;
 			break-after: region;
 		}
 		#spacer {
