--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-019.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-019.html
@@ -15,7 +15,7 @@
 			line-height: 1em;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			float: left;
@@ -26,7 +26,7 @@
 			float: left;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			height: 100px;
 			margin-bottom: 10px;
 			border: 10px solid black;
