--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-020.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-020.html
@@ -16,7 +16,7 @@
 			color: green;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			float: left;
@@ -34,7 +34,7 @@
 			clear: both;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			border-left: 20px solid blue;
 		}
 
