--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-022.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-022.html
@@ -18,12 +18,12 @@
 		.float {
 			float: left;
 			color: blue;
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 
 		.non-float {
 			color: green;
-			-webkit-flow-into: n;
+			flow-into: n;
 		}
 
 		.region {
@@ -38,10 +38,10 @@
 		}
 
 		.from-float {
-			-webkit-flow-from: f;
+			flow-from: f;
 		}
 		.from-non-float {
-			-webkit-flow-from: n;
+			flow-from: n;
 		}
 		</style>
 	</head>
