--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-023.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-023.html
@@ -16,7 +16,7 @@
 			color: green;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			float: left;
@@ -28,7 +28,7 @@
 			max-width: 100px;*/
 			border: 10px solid black;
 			display: inline-block;
-			-webkit-flow-from: f;
+			flow-from: f;
 		}
 
 		.region > p {
