--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-024.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-024.html
@@ -17,7 +17,7 @@
 			color: green;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			width: 50%;
@@ -30,7 +30,7 @@
 			height: 100px;
 			border: 10px solid black;
 			margin-bottom: 10px;
-			-webkit-flow-from: f;
+			flow-from: f;
 		}
 
 		.wide {
