--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-026.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-026.html
@@ -16,7 +16,7 @@
 			line-height: 1em;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 	
 		}
 		.float {
@@ -44,7 +44,7 @@
 			/* The region is 115px tall to catch bugs where the floats would be
 			sliced rather than properly fragmented */
 			height: 115px;
-			-webkit-flow-from: f;
+			flow-from: f;
 		}
 
 		.shifted {
