--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-029.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-029.html
@@ -18,11 +18,10 @@
 		}
 		
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		
 		.break {
-			-webkit-region-break-before: always;
 			break-before: region;
 		}
 
@@ -40,7 +39,7 @@
 		}
 
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			float: left;
 			margin-left: 10px;
 		}
