--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-030.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-030.html
@@ -18,7 +18,7 @@
 		}
 		
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		
 		.spaced {
@@ -36,7 +36,7 @@
 		}
 
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			/* float: left; is used to trigger shrink-to-fit sizing */
 			float: left;
 			margin-left: 10px;
