--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-033.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-033.html
@@ -16,7 +16,7 @@
 		}
 		
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		
 		.float {
@@ -40,7 +40,7 @@
 		}
 
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			border: 12px solid black;
 		}
 
