--- a/contributors/adobe/submitted/regions/floats/floated-regions-001.html
+++ b/contributors/adobe/submitted/regions/floats/floated-regions-001.html
@@ -18,7 +18,7 @@
 			line-height: 1em;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.blue {
 			color: blue;
@@ -29,7 +29,6 @@
 			border-color: green;
 		}
 		.break {
-			-webkit-region-break-before: always;
 			break-before: region;
 		}
 
@@ -39,7 +38,7 @@
 		}
 
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 		}
 		.region p {
 			background: red;
