--- a/contributors/adobe/submitted/regions/floats/floated-regions-002.html
+++ b/contributors/adobe/submitted/regions/floats/floated-regions-002.html
@@ -16,11 +16,11 @@
 			color: green;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 		}
 		.region p {
 			background: red;
