--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-002.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-002.html
@@ -10,7 +10,7 @@
 		<link rel="match" href="reference/floats-in-named-flow-002-ref.html">
 		<style>
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 			color: gray;
 		}
 		.float {
@@ -26,7 +26,7 @@
 			background: lightblue;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			width: 200px;
 			border: 2px solid black;
 			margin: 5px;
