--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-011.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-011.html
@@ -16,18 +16,17 @@
 			line-height: 1em;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			color: green;
 			float: left;
 		}
 		.break {
-			-webkit-region-break-after: always;
 			break-afer: region;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			margin: 10px;
 			width: 200px;
 		}
