--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-015.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-015.html
@@ -16,13 +16,13 @@
 			color: lightblue;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			float: left;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			width: 100px;
 			height: 40px;
 		}
