--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-018.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-018.html
@@ -16,7 +16,7 @@
 			color: green;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			float: left;
@@ -27,7 +27,7 @@
 			float: left;
 		}
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			height: 100px;
 			margin-bottom: 10px;
 			border: 10px solid black;
