--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-021.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-021.html
@@ -16,13 +16,12 @@
 		}
 		
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		
 		.float {
 			float: left;
 			color: blue;
-			-webkit-region-break-after: always;
 			break-after: region;
 		}
 
@@ -36,7 +35,7 @@
 		}
 
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 			max-height: 100px;
 			max-width: 100px;
 			margin-bottom: 10px;
