--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-025.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-025.html
@@ -16,7 +16,7 @@
 			line-height: 1em;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 	
 		}
 		.float {
@@ -32,7 +32,7 @@
 		}
 
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 		}
 
 		.region > p {
