--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-027.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-027.html
@@ -18,7 +18,7 @@
 			background: red;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 			color: blue;
 	
 		}
@@ -31,7 +31,7 @@
 		.region {
 			width: 100px;
 			border: 10px solid lightblue;
-			-webkit-flow-from: f;
+			flow-from: f;
 		}
 
 		.region > p {
