--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-028.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-028.html
@@ -16,7 +16,7 @@
 			color: blue;
 		}
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		.float {
 			float: right;
@@ -26,7 +26,7 @@
 		.region {
 			border: 10px solid black;
 			display: inline-block;
-			-webkit-flow-from: f;
+			flow-from: f;
 		}
 
 		.region > p {
