--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-032.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-032.html
@@ -16,7 +16,7 @@
 		}
 		
 		.flow {
-			-webkit-flow-into: f;
+			flow-into: f;
 		}
 		
 		.float {
@@ -41,7 +41,7 @@
 		}
 
 		.region {
-			-webkit-flow-from: f;
+			flow-from: f;
 		}
 
 		.region > p {
