--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-interposed.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-interposed.html
@@ -3,8 +3,8 @@
     <head>
         <title>CSS Test: test mix-blend-mode for an element having a parent and a child.</title>
         <link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+        <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
-        <meta name="flags" content="">
         <meta name="assert" content="Test checks that an element with mix-blend-mode having a child blends with the parent element.">
         <link rel="match" href="reference/green-box.html">
         <style>
