--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-video-sibling.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-video-sibling.html
@@ -3,8 +3,8 @@
     <head>
         <title>CSS Test: mix-blend-mode blending between video element with an overlapping sibling</title>
         <link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+        <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
-        <meta name="flags" content="requirements flags">
         <meta name="assert" content="Test checks that the video element blends with an overlapping sibling element with some text inside">
         <link rel="mismatch" href="reference/mix-blend-mode-video-sibling-notref.html">
         <style type="text/css">
