--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blending-with-sibling.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blending-with-sibling.html
@@ -3,6 +3,7 @@
     <head>
         <title>CSS Test: mix-blend-mode between an element and its sibling</title>
         <link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+        <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that the element with mix-blend-mode blends with a sibling element">
         <link rel="match" href="reference/green-square.html">
