--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-simple.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-simple.html
@@ -6,7 +6,7 @@
         <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that the element with mix-blend-mode blends with its parent element.">
-        <link rel="match" href="reference/mix-blend-mode-simple-ref.html">
+        <link rel="match" href="reference/green-square.html">
         <style type="text/css">
             div {
                 width: 100px;
@@ -22,7 +22,7 @@
         </style>
     </head>
     <body>
-        <p>Test passes if you can see a lime square. If the square is drawn with red, the test fails.</p>
+        <p>Test passes if you can see a green square drawn on the screen.</p>
         <div class="parent">
             <div class="child"></div>
         </div>
