--- a/pointerlock/idlharness.html
+++ b/pointerlock/idlharness.html
@@ -69,8 +69,7 @@ setup(function() {
 
 	idl_array.add_objects({ Document: ["window.document"],
                             Element: ["window.document.documentElement"],
-                            MouseEvent: ["new MouseEvent('mousemove')"],
-                            MouseEvent: ["new MouseEvent('pointerlockchange')"] });
+                            MouseEvent: ["new MouseEvent('mousemove')", "new MouseEvent('pointerlockchange')"] });
 });
 
 idl_array.test();
