--- a/html/browsers/the-window-object/security-window/window-security.html
+++ b/html/browsers/the-window-object/security-window/window-security.html
@@ -29,7 +29,6 @@ function fr_load() {
       {name: "statusbar"},
       {name: "documtoolbarent"},
       {name: "status"},
-      {name: "length"},
       {name: "frameElement"},
       {name: "navigator"},
       {name: "external"},
@@ -42,13 +41,17 @@ function fr_load() {
       {name: "confirm", isMethod: true},
       {name: "prompt", isMethod: true},
       {name: "print", isMethod: true},
-      {name: "showModalDialog", isMethod: true, args:["auto:blank"]}
+      {name: "showModalDialog", isMethod: true, args:["auto:blank", "dialog"]},
+      {name: "setTimeout", isMethod: true, args:[function () {}, 1]},
+      {name: "clearTimeout", isMethod: true, args:[function () {}, 1]},
+      {name: "setInterval", isMethod: true, args:[function () {}, 1]},
+      {name: "clearInterval", isMethod: true, args:[1]}
     ].forEach(function (item) {
       test(function () {
         assert_throws("SecurityError", function () {
           if (item.isMethod)
             if (item.args)
-              fr.contentWindow[item.name](item.args[0]);
+              fr.contentWindow[item.name](item.args[0], item.args[1]);
             else
               fr.contentWindow[item.name]();
           else
@@ -68,6 +71,7 @@ function fr_load() {
       {name: "parent"},
       {name: "opener"},
       {name: "closed"},
+      {name: "length"},
 
       //methods
       {name: "postMessage", isMethod: true, args: [{msg: 'foo'}, "*"]},
