--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blending-with-sibling.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blending-with-sibling.html
@@ -7,7 +7,7 @@
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that the element with mix-blend-mode blends with a sibling element">
         <link rel="match" href="reference/green-square.html">
-        <style>
+        <style type="text/css">
             div {
                 width: 100px;
                 height: 100px;
