--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-creates-stacking-context.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-creates-stacking-context.html
@@ -12,12 +12,19 @@
         <script src="/resources/testharnessreport.js"></script>
     </head>
     <body>
-        <div id="blender" style="mix-blend-mode: multiply;"></div>
+        <div id="blender"></div>
         <script type="text/javascript">
+
+            var blendModes = ["multiply", "screen", "overlay", "darken", "lighten", "color-dodge", "color-burn",
+                "hard-light", "soft-light", "difference", "exclusion", "hue", "saturation", "color", "luminosity"];
+
             test(function() {
                 var blender = document.getElementById("blender");
-                var blenderStyle = window.getComputedStyle(blender);
-                assert_true(blenderStyle.zIndex !== "auto");
+                for (var i = 0; i < blendModes.length; ++i) {
+                    blender.style.mixBlendMode = blendModes[i];
+                    var blenderStyle = window.getComputedStyle(blender);
+                    assert_true(blenderStyle.zIndex !== "auto");
+                }
             });
         </script>
     </body>
