Remove smart quotes

--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-creates-stacking-context.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-creates-stacking-context.html
@@ -6,7 +6,7 @@
         <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="flags" content="dom">
-        <meta name="assert" content="Test checks that applying a blendmode other than ‘normal’
+        <meta name="assert" content="Test checks that applying a blendmode other than normal
         to the element must establish a new stacking context.">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
